--- a/vc2017/Eternity.vcxproj.filters
+++ b/vc2017/Eternity.vcxproj.filters
@@ -235,11 +235,11 @@
     <Filter Include="Source Files\XL_\XL_ Source">
       <UniqueIdentifier>{09ccd1ab-91bb-4216-9ff4-c314b45f28c8}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Tobii">
-      <UniqueIdentifier>{72826839-60c7-4251-bf51-9383db473296}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\I_">
       <UniqueIdentifier>{ff0bb973-cedd-4fb5-ad3e-294b53012fe2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Tobii">
+      <UniqueIdentifier>{70bde44d-4f34-481b-aac7-7e9c1dbdb469}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -1813,7 +1813,11 @@
     <None Include="res\ee.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="Tobii\SDK-License.pdf">
+    <None Include="@(NativeLibs)" />
+    <None Include="Tobii\SDK-License_zh.pdf">
+      <Filter>Tobii</Filter>
+    </None>
+    <None Include="Tobii\SDK-License_en.pdf">
       <Filter>Tobii</Filter>
     </None>
     <None Include="Tobii\API-Reference.pdf">
