--- a/vc2017/Eternity.vcxproj
+++ b/vc2017/Eternity.vcxproj
@@ -796,6 +796,7 @@
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|x64'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="..\source\eye_fixation.cpp" />
     <ClCompile Include="..\source\i_tobii.cpp" />
     <ClCompile Include="..\source\mn_items.cpp" />
     <ClCompile Include="..\source\m_debug.cpp" />
@@ -1963,6 +1964,7 @@
     <ClInclude Include="..\Source\Hu_stuff.h" />
     <ClInclude Include="..\Source\hi_stuff.h" />
     <ClInclude Include="..\Source\in_lude.h" />
+    <ClInclude Include="..\source\eye_fixation.h" />
     <ClInclude Include="..\source\i_tobii.h" />
     <ClInclude Include="..\source\metaspawn.h" />
     <ClInclude Include="..\source\mn_items.h" />
